--- a/src/index.css
+++ b/src/index.css
@@ -35,15 +35,17 @@
   font-weight: normal;
 }
 
+html {
+  font-size: calc(0.2em + 1vw);
+}
+
 body {
-  min-height: 100vh;
   color: var(--vt-c-white);
   background: var(--vt-c-black);
   transition: color 0.5s, background-color 0.5s;
-  line-height: 1.6;
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  font-size: 15px;
+  font-size: 16px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -126,7 +128,7 @@ button {
   font-weight: inherit;
   width: auto;
   border-radius: 10px;
-  left: 5em;
+  left: 5rem;
 }
 
 [data-dropzone] input::placeholder {
@@ -136,10 +138,10 @@ button {
 }
 
 [data-dropzone] h1 {
-  width: 7em;
+  width: 7rem;
   height: auto;
-  left: 5em;
-  top: 1em;
+  left: 5rem;
+  top: 1rem;
   cursor: all-scroll;
 }
 
